--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@unhead/vue": "^2.0.12",
     "eslint": "^9.31.0",
     "nuxt": "^4.0.1",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
